[UPD] blanket_sale_order: improved fields transferring to sale orders.
 * Wizard now transfers client_order_ref field from blanket to SO.
 * Added field incoterm to blanket order and made it transfer to SO.
 * Made blanket notes transfer to SO.

--- a/sale_blanket_order/views/sale_blanket_order_views.xml
+++ b/sale_blanket_order/views/sale_blanket_order_views.xml
@@ -248,6 +248,9 @@
                                         groups="base.group_multi_company"
                                     />
                                 </group>
+                                <group name="delivery" string="Delivery">
+                                    <field name="incoterms_id" />
+                                </group>
                                 <group name="invoicing" string="Invoicing">
                                     <field
                                         name="analytic_account_id"
